--- a/src/main/client/templates/_header.html
+++ b/src/main/client/templates/_header.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="small-4 columns">
     <!-- Start: Logo -->
-    <img src="./img/logo.png" width="236" height="66" alt="logicline Customer Service" class="float--left display--block header__logo cursor--pointer" ng-click="goTo(User? 'dashboard': 'login');" />
+    <img src="./img/logo.png" width="236" height="66" alt="Sumitomo Heavy Industries, Ltd." class="float--left display--block header__logo cursor--pointer" ng-click="goTo(User? 'dashboard': 'login');" />
     <!-- End: Logo -->
   </div>
 
@@ -15,9 +15,9 @@
   <!-- End: User -->
 
   <!-- Start: Languages -->
-  <div class="small-2 medium-2 columns header__language-switch text--right">
+  <!--<div class="small-2 medium-2 columns header__language-switch text--right">
     <img src="./img/icons/lang-de.gif" alt="German" title="German" width="20" height="12" class="spacing--left--10 float--right cursor--pointer" ng-click="languageSwitch('de_DE');">
     <img src="./img/icons/lang-en.gif" alt="English" title="English" width="20" height="12" class="float--right cursor--pointer" ng-click="languageSwitch('en_US');">
-  </div>
+  </div>-->
   <!-- End: Languages -->
 </div>
