--- a/src/main/client/css/logicline.css
+++ b/src/main/client/css/logicline.css
@@ -1,13 +1,3 @@
-/*------------------------------------*\ logicline
- logicline GmbH
-\*------------------------------------*/
-/*------------------------------------*\ $IMPORTS
-\*------------------------------------*/
-/** Variables, resets, mixins, global assets like fonts */
-/*------------------------------------*\ $VARS
-\*------------------------------------*/
-/*------------------------------------*\ $RESET
-\*------------------------------------*/
 *, *:before, *:after { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0; margin: 0; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary, audio, canvas, video { display: block; }
@@ -807,7 +797,9 @@ th.hide-for-touch { display: table-cell !important; }
 
 /*------------------------------------*\ $FOOTER
 \*------------------------------------*/
-.footer { height: 50px; background-color: #ffffff; }
+.footer {
+	height: 50px; background-color: #f5f5f5;
+}
 
 /*------------------------------------*\ $HEADER
 \*------------------------------------*/
@@ -825,7 +817,9 @@ nav { float: left; width: 100%; }
 
 nav ul { margin: 0; padding: 0; width: 100%; background: #909090;; list-style-type: none; float: left; }
 
-nav ul li { display: inline-block; padding: 17px 2.1% 14px 2.1%; border-right: 1px solid #717171; color: #ffffff; text-transform: uppercase; font-family: 'Roboto', Arial; font-size: 14px; float: left; }
+nav ul li { display: inline-block; padding: 17px 2.1% 14px 2.1%; 
+	
+-right: 1px solid #717171; color: #ffffff; text-transform: uppercase; font-family: 'Roboto', Arial; font-size: 14px; float: left; }
 
 nav ul li.active { background: #e5e5e5; color: #5e5e5e; }
 
@@ -836,7 +830,7 @@ nav ul li.active { background: #e5e5e5; color: #5e5e5e; }
 }
 
 .navbar-inner.footer {
-    background-color: #fafafa;
+    background-color: #015AAC;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
